Feature progress: Filtering working. Need to remove table rows.

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -8,3 +8,5 @@
 @import "modules/_navbar.css";
 @import "modules/_site-footer.css";
 @import "modules/_table.css";
+@import "modules/_add-name.css";
+@import "modules/_form.css";
