--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -2,8 +2,8 @@
 @import "base/_variables";
 @import "base/_mixins";
 @import "base/_global";
-@import "modules/_large-hero.css";
 @import "modules/_navbar.css";
+@import "modules/_primary-nav.css";
 @import "modules/_site-header";
 @import "modules/_navbar.css";
 @import "modules/_site-footer.css";
