--- a/app/assets/styles/modules/_navbar.css
+++ b/app/assets/styles/modules/_navbar.css
@@ -4,7 +4,8 @@
     background: $mainBlue;
 
     &__logo {
-    background:green;
+    background:$mainOrange;
+    padding:0 1rem;
 
     }
     &--nav {
