--- a/app/assets/styles/modules/_form.css
+++ b/app/assets/styles/modules/_form.css
@@ -1,9 +1,12 @@
 .add-name-form {
     display:none;
     width:80%;
-    background: $mainOrange;
-    color:$mainBlue;
+    background: $mainBlue;
+    color:$mainOrange;
     margin-left:0;
+    border:1px inset $mainOrange;
+    border-radius:10px;
+
  &__submit-filter-btn{
      background:$mainOrange;
             border:1px inset $mainBlue;
@@ -14,23 +17,27 @@
             margin-bottom:-1rem;
  }
     &__add-record { 
-            margin:1rem 0;;
+            box-sizing: border-box;
+            margin:1rem 0;
+            padding-top:1.2rem;
+            height:20%;
         & a {
             text-decoration: none;  
             background:$mainOrange;
             border:1px inset $mainBlue;
             border-radius:3px;
             color:$mainBlue;
-            padding: .2rem .5rem;
+            padding: .05rem .5rem;
             padding-left:0;
             margin-bottom:1rem;
+
         }
     }
      &__icon{
         font-size:1rem;
         background:$mainOrange;
         color:$mainBlue;
-        margin:1rem;
+        margin:1rem;  
     }
 }
 .form-group {
@@ -51,4 +58,8 @@
         color:$mainBlue;  
     }
    
+}
+.filter-add-area {
+    display:flex;
+    align-content: middle;
 }
